모멘텀 버튼 css 수정

--- a/css/style.css
+++ b/css/style.css
@@ -77,22 +77,39 @@ html {
   text-shadow: 0 0 15px rgb(240, 234, 234);
 }
 
-#todo-form [type='text'] {
+input[type='text'] {
   padding: 0.5rem;
+  border: 1px solid #ddd;
   border-radius: 0.5rem;
   width: 15rem;
+  outline: none;
 }
+
+input[type='submit'] {
+  padding: 0.5rem;
+  border: 1px solid rgb(106, 178, 219);
+  border-radius: 0.5rem;
+  width: 5rem;
+  background: rgb(106, 178, 219);
+  color: white;
+  outline: none;
+}
+
 #todo-list {
   list-style: decimal;
   background-color: rgba(2, 2, 2, 0.26);
   max-width: 25rem;
-  height: 15rem;
   max-height: 15rem;
   color: white;
   overflow-y: auto;
 }
 #todo-list span {
   margin-right: 0.5rem;
+}
+#todo-list button {
+  border: none;
+  background: transparent;
+  font-size: 10px;
 }
 
 @media screen and (max-width: 768px) {
